# notion2github

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
tests/: test_gh_issue_creator.py
