[tool.poetry]
name = "notion2github"
version = "0.1.0"
description = ""
authors = ["chrisaballard <chris@climatepolicyradar.org>"]

[tool.poetry.dependencies]
python = "^3.8"
ghapi = "^0.1.19"
pandas = "^1.4.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
